Replaces calls to `Arrays.asList()` with too few arguments by better methods.